- Kết nối các back end với front end - Chạy các hoạt động cơ bản

--- a/src/main/resources/templates/admin/admin_event_detail.html
+++ b/src/main/resources/templates/admin/admin_event_detail.html
@@ -28,7 +28,6 @@
     <span th:text="'Email: ' + ${speaker.speaker_email}"></span>
     </br>
 
-    <a th:href="@{/register_home}">Back</a> </br>
-    <a th:href="@{'/register_event/' +${event.event_id}}">Đăng kí tham gia sự kiện</a> </br>
+    <a th:href="@{/admin_home}">Back</a> </br>
 </body>
 </html>
