--- a/src/main/resources/templates/admin/create_event.html
+++ b/src/main/resources/templates/admin/create_event.html
@@ -17,6 +17,10 @@
             <td><input type="date" th:field="${newevent.event_date}" /> </td>
         </tr>
         <tr>
+            <td>Speaker </td>
+            <td><input type="text" th:field="${newevent.event_speaker_id}" /> </td>
+        </tr>
+        <tr>
             <td>Starting time</td>
             <td><input type="text" th:field="${newevent.event_starting_time}" /> </td>
         </tr>
