--- a/src/main/resources/templates/register/register_your_event.html
+++ b/src/main/resources/templates/register/register_your_event.html
@@ -9,7 +9,6 @@
 <h1>Event Management - Register Home </h1>
 
 <a th:href="@{/register_home}">Home </a> </br>
-<a th:href="@{/register/your_event}">Your Events </a> </br>
 <h1 th:inline="text">Xin chào bạn [[${#httpServletRequest.remoteUser}]]!</h1>
 <form th:action="@{/logout}" method="post">
     <input type="submit" value="Đăng xuất"/>
@@ -20,18 +19,19 @@
     <table border="1" >
         <tr>
             <th>Event's Name</th>
-            <th>Admin</th>
-            <th>Speaker</th>
-            <th>Đăng kí </th>
+            <th>Delete</th>
         </tr>
         <tr th:each ="event : ${events}">
             <td th:utext="${event.event_name}">...</td>
-            <td th:utext="${event.event_admin_id}">...</td>
-            <td th:utext="${event.event_speaker_id}">...</td>
-            <td><a th:href="@{'/register/' + ${event.event_id}}" >Đăng kí</a></td>
+            <td>
+                <form th:action="@{'/event/' + ${event.event_id}}" method="post">
+                    <input type="hidden" name="_method" value="delete">
+                    <input type="submit" value="Delete" />
+                </form>
+            </td>
         </tr>
     </table>
 </form>
-
 </body>
 </html>
+
