--- a/src/main/resources/templates/admin/admin_your_event.html
+++ b/src/main/resources/templates/admin/admin_your_event.html
@@ -1,11 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://wwww.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
@@ -26,19 +19,21 @@
     <table border="1" >
         <tr>
             <th>Event's Name</th>
-            <th>Detail</th>
+            <th>Edit</th>
             <th>Delete</th>
         </tr>
         <tr th:each ="event : ${events}">
             <td th:utext="${event.event_name}">...</td>
-            <td><a th:href="@{'/home/' + ${event.event_id}}" >Chi tiết</a></td>
-            <td> <input type="radio" ></td>
+            <td><a th:href="@{'/event/' + ${event.event_id}}" >Chỉnh sửa thông tin </a></td>
+            <td>
+                <form th:action="@{'/event/' + ${event.event_id}}" method="post">
+                    <input type="hidden" name="_method" value="delete">
+                    <input type="submit" value="Delete" />
+                </form>
+            </td>
         </tr>
     </table>
-    <button type="button">Delete</button>
 </form>
 </body>
 </html>
 
-</body>
-</html>
