--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,11 +15,13 @@
             <tr>
                 <th>Event's Name</th>
                 <th>Admin id</th>
+                <th>Speaker id</th>
                 <th>Detail</th>
             </tr>
             <tr th:each ="event : ${events}">
                 <td th:utext="${event.event_name}">...</td>
                 <td th:utext="${event.event_admin_id}">...</td>
+                <td th:utext="${event.event_speaker_id}">...</td>
                 <td><a th:href="@{'/home/' + ${event.event_id}}" >Chi tiết</a></td>
             </tr>
         </table>
