--- a/src/main/resources/templates/register/register_event_detail.html
+++ b/src/main/resources/templates/register/register_event_detail.html
@@ -28,7 +28,7 @@
     <span th:text="'Email: ' + ${speaker.speaker_email}"></span>
     </br>
 
-    <a th:href="@{/register_home}">Back</a> </br>
+    <a th:href="@{/register/home}">Back</a> </br>
     <a th:href="@{'/register_event/' +${event.event_id}}">Đăng kí tham gia sự kiện</a> </br>
 </body>
 </html>
