--- a/src/main/resources/templates/speaker/speaker_event_detail.html
+++ b/src/main/resources/templates/speaker/speaker_event_detail.html
@@ -17,7 +17,7 @@
     <span th:text="'Ending_time: ' + ${event.event_ending_time}"></span>
     </br>
 
-    <a th:href="@{/speaker_home}">Back</a> </br>
+    <a th:href="@{/speaker/home}">Back</a> </br>
 
 </body>
 </html>
