--- a/src/main/resources/templates/admin/admin_event_detail.html
+++ b/src/main/resources/templates/admin/admin_event_detail.html
@@ -2,10 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Admin Event Detail </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+        body {
+            position: relative;
+        }
+    </style>
 </head>
-<body>
-    <h1> Event Detail </h1>
+<body  data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50" >
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+    <div class="container-fluid">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#section1">Event's Name </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#section2">Speaker's Information</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#section3">Summary</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/admin/home}">Back</a> </br>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<div id="section1" class="container-fluid bg-success text-white" style="padding:100px 20px;">
+    <h1 th:utext="${event.event_name}" ></h1> </br>
+</div>
+
+<div id="section2" class="container-fluid bg-warning" style="padding:100px 20px;">
+    <h1 th:utext="${speaker.speaker_name}"></h1>
+    </br>
+    <span th:text="'Age: ' + ${speaker.speaker_age}"></span>
+    </br>
+    <span th:text="'Career: ' + ${speaker.speaker_career}"></span>
+    </br>
+    <span th:text="'Email: ' + ${speaker.speaker_email}"></span>
+    </br>
+</div>
+<div id="section3" class="container-fluid bg-secondary text-white" style="padding:100px 20px;">
+    <h1> Sumary </h1>
     <span th:text="'Name: ' + ${event.event_name}"></span>
     </br>
     <span th:text="'Date: ' + ${event.event_date}"></span>
@@ -15,19 +58,7 @@
     <span th:text="'Starting_time: ' + ${event.event_starting_time}"></span>
     </br>
     <span th:text="'Ending_time: ' + ${event.event_ending_time}"></span>
+</div>
 
-    </br>
-    <h1> Speaker Detail </h1>
-
-    <span th:text="'Name: ' + ${speaker.speaker_name}"></span>
-    </br>
-    <span th:text="'Age: ' + ${speaker.speaker_age}"></span>
-    </br>
-    <span th:text="'Career: ' + ${speaker.speaker_career}"></span>
-    </br>
-    <span th:text="'Email: ' + ${speaker.speaker_email}"></span>
-    </br>
-
-    <a th:href="@{/admin_home}">Back</a> </br>
 </body>
 </html>
