--- a/src/main/resources/templates/admin/create_event.html
+++ b/src/main/resources/templates/admin/create_event.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"  xmlns:th="http://wwww.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 <h1>Event's Creating Form</h1>
-<form th:action="@{/event}" th:object="${newevent}" method="POST">
+
+<form th:action="@{/admin/event}" th:object="${newevent}" method="POST" >
+    <div class="mb-3 mt-3">
+        <label for="name" class="form-label">Event's name:</label>
+        <input type="text" class="form-control" id="name" placeholder="Enter event's name " th:field="${newevent.event_name}">
+    </div>
+    <div class="mb-3 mt-3">
+        <label for="date" class="form-label">Running date:</label>
+        <input type="date" class="form-control" id="date" placeholder="Enter running date " th:field="${newevent.event_date}">
+    </div>
+    <div class="mb-3 mt-3">
+        <label for="speaker" class="form-label">Speaker:</label>
+        <select th:field="${newevent.event_speaker_id}" id= "speaker" class="form-select" >
+            <option th:each = "speaker : ${speakers}"
+                    th:value = "${speaker.id}"
+                    th:utext = "${speaker.speaker_name}">
+            </option>
+        </select>
+    </div>
+    <div class="mb-3 mt-3">
+        <label for="account" class="form-label">Starting time :</label>
+        <input type="text" class="form-control" id="account" placeholder="Enter event's starting time " th:field="${newevent.event_starting_time}">
+    </div>
+
+    <div class="mb-3">
+        <label for="pwd" class="form-label">Ending time :</label>
+        <input type="text" class="form-control" id="pwd" placeholder="Enter event's ending time " th:field="${newevent.event_ending_time}" >
+    </div>
+    <div class="mb-3">
+        <label for="location" class="form-label">Location :</label>
+        <input type="text" class="form-control" id="location" placeholder="Enter event's location "  th:field="${newevent.event_location}" >
+    </div>
+    
+    <button type="submit" class="btn btn-primary">Submit</button>
+    <a th:href="@{/}">Cancel</a>
+</form>
+<!--<form th:action="@{/admin/event}" th:object="${newevent}" method="POST">
     <table>
         <tr>
             <td>Name</td>
@@ -26,7 +68,7 @@
         </tr>
         <tr>
             <td>Ending time</td>
-            <td><input type="text" th:field="${newevent.event_ending_time}" /> </td>
+            <td><input type="text" th:field="${newevent.event_starting_time}" /> </td>
         </tr>-
         <tr>
             <td>Location</td>
@@ -35,11 +77,11 @@
         <tr>
             <td>
                 <input type="submit" value="Submit" />
-                <a th:href="@{/admin_home}">Cancel</a>
+                <a th:href="@{/admin/home}">Cancel</a>
             </td>
         </tr>
     </table>
-</form>
+</form>-->
 
 </body>
 </html>
