--- a/src/main/resources/templates/create_user.html
+++ b/src/main/resources/templates/create_user.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 What role do you want to be : </br>
-<a th:href="@{/create_speakerform}">Diễn giả</a> </br>
-<a th:href="@{/create_registerform}">Người tham gia</a>
+
+<a th:href="@{/home/create_speakerform}"  class="btn btn-success">Diễn giả </a>
+<a th:href="@{/home/create_registerform}"  class="btn btn-success" >Người tham gia</a>
 
 </body>
 </html>
