--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,23 +1,46 @@
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://wwww.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://wwww.thymeleaf.org">
 <head>
     <title>Home</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 <h1>Event Management</h1>
-    <a th:href="@{/home}">Home </a> </br>
-    <a th:href="@{/login}">Đăng nhập</a> </br>
-    <a th:href="@{/create_user}">Đăng ký</a>
+
+<!-- A grey horizontal navbar that becomes vertical on small screens -->
+    <nav class="navbar navbar-expand-sm bg-light">
+        <div class="container-fluid">
+            <!-- Links -->
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/home}">Home </a> </br>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/home/login}">Đăng nhập</a> </br>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/home/create_user}">Đăng ký</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <form>
-        <table border="1" >
-            <tr>
-                <th>Event's Name</th>
-                <th>Admin id</th>
-                <th>Speaker id</th>
-                <th>Detail</th>
-            </tr>
+        <table class="table table-bordered" >
+            <thead>
+                <tr>
+                    <th>Event's Name</th>
+                    <th>Admin id</th>
+                    <th>Speaker id</th>
+                    <th>Detail</th>
+                </tr>
+            </thead>
             <tr th:each ="event : ${events}">
                 <td th:utext="${event.event_name}">...</td>
                 <td th:utext="${event.event_admin_id}">...</td>
@@ -26,5 +49,7 @@
             </tr>
         </table>
     </form>
+
 </body>
 </html>
+
