--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Log in</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 
-<form name='f' th:action="@{/j_spring_security_check}" method='POST'>
-  <table>
-    <tr>
-      <td>User:</td>
-      <td><input type='text' name='username' value=''></td>
-    </tr>
-    <tr>
-      <td>Password:</td>
-      <td><input type='password' name='password' /></td>
-    </tr>
-    <tr>
-      <td>Remember Me?</td>
-      <td><input type="checkbox" name="remember-me" /></td>
-    </tr>
-    <tr>
-      <td><input name="submit" type="submit" value="submit" /></td>
-    </tr>
-  </table>
-</form>
+<div class="container">
+  <h2 class="form-signin-heading">Welcome to Event Management, please login</h2>
+  <form class="form-signin" method="POST" th:action="@{/j_spring_security_check}">
+    <p>
+      <label for="username" class="sr-only">Username</label>
+      <input type="text" id="username" name="username" class="form-control"
+             placeholder="Username" required autofocus>
+    </p>
+    <p>
+      <label for="password" class="sr-only">Password</label>
+      <input type="password" id="password" name="password" class="form-control"
+             placeholder="Password" required>
+    </p>
+      Remember Me?
+    <input type="checkbox" name="remember-me" /> </br>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+  </form>
+   Nếu bạn chưa có tài khoản hãy ấn vào <a th:href="@{/home/create_user}">đây</a> để đăng ký.
+</div>
 
 </body>
 </html>
