--- a/src/main/resources/templates/register/register_home.html
+++ b/src/main/resources/templates/register/register_home.html
@@ -4,11 +4,59 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <title>Home</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<h1>Event Management - Register Home </h1>
+    <h1>Event Management - Register Home </h1>
+    <!-- A grey horizontal navbar that becomes vertical on small screens -->
+    <nav class="navbar navbar-expand-sm bg-light">
+        <div class="container-fluid">
+            <!-- Links -->
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/register/home}">Home </a> </br>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/register/your_events}">Your Events</a> </br>
+                </li>
+                <li class="nav-item">
+                    <h5 th:inline="text">Xin chào bạn ! </h5>
+                </li>
+                <li class="nav-item">
+                    <form th:action="@{/logout}" method="post">
+                        <input  class="btn btn-outline-light text-dark" type="submit" value="Đăng xuất"/>
+                    </form>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-<a th:href="@{/register_home}">Home </a> </br>
+    <form>
+        <table class="table table-bordered" >
+            <thead>
+            <tr>
+                <th>Event's Name</th>
+                <th>Admin id</th>
+                <th>Speaker id</th>
+                <th>Chi tiết</th>
+            </tr>
+            </thead>
+            <tr th:each ="event : ${events}">
+                <td th:utext="${event.event_name}">...</td>
+                <td th:utext="${event.event_admin_id}">...</td>
+                <td th:utext="${event.event_speaker_id}">...</td>
+                <td><a th:href="@{'/register/' + ${event.event_id}}" >Chi tiết</a></td>
+            </tr>
+        </table>
+    </form>
+<!--<h1>Event Management - Register Home </h1>
+
+<a th:href="@{/register/home}">Home </a> </br>
 <a th:href="@{/register/your_event}">Your Events </a> </br>
 <h1 th:inline="text">Xin chào bạn [[${#httpServletRequest.remoteUser}]]!</h1>
 <form th:action="@{/logout}" method="post">
@@ -31,7 +79,7 @@
             <td><a th:href="@{'/register/' + ${event.event_id}}" >Đăng kí</a></td>
         </tr>
     </table>
-</form>
+</form>-->
 
 </body>
 </html>
