--- a/src/main/resources/templates/speaker/speaker_home.html
+++ b/src/main/resources/templates/speaker/speaker_home.html
@@ -4,30 +4,57 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <title>Home</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<h1>Event Management - Speaker Home </h1>
 
-<a th:href="@{/speaker_home}">Home </a> </br>
-<a th:href="@{/speaker/your_event}">Your Events </a> </br>
-<h1 th:inline="text">Xin chào bạn [[${#httpServletRequest.remoteUser}]]!</h1>
-<form th:action="@{/logout}" method="post">
-    <input type="submit" value="Đăng xuất"/>
-</form>
-</br>
+    <h1>Event Management - Speaker Home </h1>
+    <!-- A grey horizontal navbar that becomes vertical on small screens -->
+    <nav class="navbar navbar-expand-sm bg-light">
+        <div class="container-fluid">
+            <!-- Links -->
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/speaker/home}">Home </a> </br>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/speaker/your_events}">Your Events</a> </br>
+                </li>
+                <li class="nav-item">
+                    <h5 th:inline="text">Xin chào bạn ! </h5>
+                </li>
+                <li class="nav-item">
+                    <form th:action="@{/logout}" method="post">
+                        <input  class="btn btn-outline-light text-dark" type="submit" value="Đăng xuất"/>
+                    </form>
+                </li>
 
-<form>
-    <table border="1" >
-        <tr>
-            <th>Event's Name</th>
-            <th>Detail</th>
-        </tr>
-        <tr th:each ="event : ${events}">
-            <td th:utext="${event.event_name}">...</td>
-            <td><a th:href="@{'/speaker/' + ${event.event_id}}" >Chi tiết</a></td>
-        </tr>
-    </table>
-</form>
+            </ul>
+        </div>
+    </nav>
+    <form>
+        <table class="table table-bordered" >
+            <thead>
+            <tr>
+                <th>Event's Name</th>
+                <th>Admin id</th>
+                <th>Speaker id</th>
+                <th>Detail</th>
+            </tr>
+            </thead>
+            <tr th:each ="event : ${events}">
+                <td th:utext="${event.event_name}">...</td>
+                <td th:utext="${event.event_admin_id}">...</td>
+                <td th:utext="${event.event_speaker_id}">...</td>
+                <td><a th:href="@{'/speaker/' + ${event.event_id}}" >Chi tiết</a></td>
+            </tr>
+        </table>
+    </form>
 
 </body>
 </html>
