--- a/src/main/resources/templates/speaker/speaker_your_event.html
+++ b/src/main/resources/templates/speaker/speaker_your_event.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Event Management - Speaker Your Event </h1>
 
-<a th:href="@{/speaker_home}">Home </a> </br>
+<a th:href="@{/speaker/home}">Home </a> </br>
 <h1 th:inline="text">Xin chào bạn [[${#httpServletRequest.remoteUser}]]!</h1>
 <form th:action="@{/logout}" method="post">
     <input type="submit" value="Đăng xuất"/>
