- Chuyển hoàn toàn sang bootstrap - Validate register

--- a/src/main/resources/templates/admin/admin_your_event.html
+++ b/src/main/resources/templates/admin/admin_your_event.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" xmlns:th="http://wwww.thymeleaf.org" >
 
 <head>
     <title>Admin Your Events</title>
