--- a/src/main/resources/templates/admin/admin_edit_event.html
+++ b/src/main/resources/templates/admin/admin_edit_event.html
@@ -1,49 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://wwww.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Edit Event</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<form th:action="@{'/admin/event/' +${editevent.event_id}}" th:object="${editevent}" method="post">
-    <table>
-        <tr>
-            <td>Name</td>
-            <td><input type="text" th:field="${editevent.event_name}" /></td>
-        </tr>
-        <tr>
-            <td>Date</td>
-            <td><input  type="date" th:field="${editevent.event_date}" /> </td>
-        </tr>
-        <tr>
-            <td>Admin</td>
-            <td><input type="text"  readonly="true" th:field="${editevent.event_admin_id}" /> </td>
-        </tr>
-        <tr>
-            <td>Speaker</td>
-            <td><input type="text" th:field="${editevent.event_speaker_id}" /> </td>
-        </tr>
-        <tr>
-            <td>Starting time</td>
-            <td><input type="text" th:field="${editevent.event_starting_time}" /> </td>
-        </tr>
-        <tr>
-            <td>Ending time</td>
-            <td><input type="text" th:field="${editevent.event_ending_time}" /> </td>
-        </tr>-
-        <tr>
-            <td>Location</td>
-            <td><input type="text" th:field="${editevent.event_location}" /> </td>
-        </tr>
-        <tr>
-            <td>
-                <input type="submit" value="Submit" />
-            </td>
-        </tr>
-    </table>
-</form>
-<a th:href="@{/admin/home}">Back</a> </br>
-
-
+    <form th:action="@{'/admin/event/' +${editevent.event_id}}" th:object="${editevent}" method="POST" >
+        <div class="mb-3 mt-3">
+            <label for="name" class="form-label"> Event's name:</label>
+            <input type="text" class="form-control" id="name" placeholder="Enter event's name " th:field="${editevent.event_name}">
+        </div>
+        <div class="mb-3 mt-3">
+            <label for="date" class="form-label">Date:</label>
+            <input type="date" class="form-control" id="date" placeholder="Enter date " th:field="${editevent.event_date}">
+        </div>
+        <div class="mb-3 mt-3">
+            <label for="email" class="form-label">Location:</label>
+            <input type="text" class="form-control" id="email" placeholder="Enter event's location " th:field="${editevent.event_location}">
+        </div>
+        <div class="mb-3 mt-3">
+            <label for="starting" class="form-label">Starting Time:</label>
+            <input type="text" class="form-control" id="starting" placeholder="Enter strating time " th:field="${editevent.event_starting_time}">
+        </div>
+        <div class="mb-3">
+            <label for="ending" class="form-label">Ending Time:</label>
+            <input type="text" class="form-control" id="ending" placeholder="Enter ending time" name="pswd" th:field="${editevent.event_ending_time}" >
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+        <a th:href="@{/admin/home}">Cancel</a>
+    </form>
 </body>
 </html>
