--- a/src/main/resources/templates/create_register.html
+++ b/src/main/resources/templates/create_register.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://wwww.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://wwww.thymeleaf.org" >
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Create Register</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Latest compiled and minified CSS -->
@@ -14,32 +13,33 @@
 <form th:action="@{/create_register}" th:object="${newregister}" method="POST" >
     <div class="mb-3 mt-3">
         <label for="name" class="form-label">Name:</label>
-        <input type="text" class="form-control" id="name" placeholder="Enter your name " th:field="${newregister.register_name}">
+        <input type="text" class="form-control" id="name" placeholder="Enter your name " th:field="*{register_name}">
     </div>
     <div class="mb-3 mt-3">
         <label for="age" class="form-label">Age:</label>
-        <input type="number" class="form-control" id="age" placeholder="Enter your age " th:field="${newregister.register_age}">
+        <input type="number" class="form-control" id="age" placeholder="Enter your age " th:field="*{register_age}">
     </div>
     <div class="mb-3 mt-3">
         <label for="email" class="form-label">Email:</label>
-        <input type="email" class="form-control" id="email" placeholder="Enter your email " th:field="${newregister.register_email}">
+        <input type="email" class="form-control" id="email" placeholder="Enter your email " th:field="*{register_email}">
     </div>
     <div class="mb-3 mt-3">
         <label for="account" class="form-label">Account:</label>
-        <input type="text" class="form-control" id="account" placeholder="Enter your account name " th:field="${newregister.register_account_name}">
+        <input type="text" class="form-control" id="account" placeholder="Enter your account name " th:field="*{register_account_name}">
     </div>
     <div class="mb-3">
         <label for="pwd" class="form-label">Password:</label>
-        <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd" th:field="${newregister.register_account_password}" >
+        <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd" th:field="*{register_account_password}" >
     </div>
-    <!--<div class="mb-3">
+    <div class="mb-3">
         <label for="cfpwd" class="form-label">Password:</label>
-        <input type="password" class="form-control" id="cfpwd" placeholder="Enter confirm password" name="cfpswd" th:field="${newregister.register_account_password}" >
-    </div>-->
+        <input type="password" class="form-control" id="cfpwd" placeholder="Enter confirm password" name="cfpswd" th:field="*{confirm_password}" >
+    </div>
 
     <button type="submit" class="btn btn-primary">Submit</button>
     <a th:href="@{/}">Cancel</a>
 </form>
+
 
 
 <!--<form th:action="@{/register}" th:object="${newregister}" method="POST">
