--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -42,13 +42,15 @@
                 </tr>
             </thead>
             <tr th:each ="event : ${events}">
-                <td th:utext="${event.event_name}">...</td>
-                <td th:utext="${event.event_admin_id}">...</td>
-                <td th:utext="${event.event_speaker_id}">...</td>
-                <td><a th:href="@{'/home/' + ${event.event_id}}" >Chi tiết</a></td>
+                    <td th:utext="${event.event_name}">...</td>
+                    <td th:utext="${event.event_admin_id}">...</td>
+                    <td th:utext="${event.event_speaker_id}">...</td>
+                    <td><a th:href="@{'/home/' + ${event.event_id}}" >Chi tiết</a></td>
             </tr>
         </table>
     </form>
+
+<!--<img th:src="@{/img/img.png}"  class="img-fluid" alt="Italian Trulli">-->
 
 </body>
 </html>
