--- a/src/main/resources/templates/register/register_your_event.html
+++ b/src/main/resources/templates/register/register_your_event.html
@@ -1,37 +1,58 @@
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://wwww.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://wwww.thymeleaf.org">
 <head>
-    <title>Home</title>
+    <title>Register Your Event</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<h1>Event Management - Register Home </h1>
+<h1>Event Management - Register Your Event </h1>
 
-    <a th:href="@{/register/home}">Home </a> </br>
-    <h1 th:inline="text">Xin chào bạn [[${#httpServletRequest.remoteUser}]]!</h1>
-    <form th:action="@{/logout}" method="post">
-        <input type="submit" value="Đăng xuất"/>
-    </form>
-</br>
+<nav class="navbar navbar-expand-sm bg-light">
+    <div class="container-fluid">
+        <!-- Links -->
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/register/home}">Home </a> </br>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/register/your_events}">Your Events</a> </br>
+            </li>
+            <li class="nav-item">
+                <h5 th:inline="text">Xin chào bạn ! </h5>
+            </li>
+            <li class="nav-item">
+                <form th:action="@{/logout}" method="post">
+                    <input class="btn btn-outline-light text-dark" type="submit" value="Đăng xuất"/>
+                </form>
+            </li>
+        </ul>
+    </div>
+</nav>
+<form>
+    <table class="table table-bordered" >
+        <thead>
+        <tr>
+            <th>Event's Name</th>
+            <th>Cancel</th>
+        </tr>
+        </thead>
+        <tr th:each ="event : ${events}">
+            <td th:utext="${event.event_name}">...</td>
+            <td>
+                <form th:action="@{'/register/cancel_event/' + ${event.event_id}}" method="post">
+                    <input type="submit" value="Cancel" />
+                </form>
+            </td>
+        </tr>
+    </table>
+</form>
 
-    <form>
-        <table border="1" >
-            <tr>
-                <th>Event's Name</th>
-                <th>Delete</th>
-            </tr>
-            <tr th:each ="event : ${events}">
-                <td th:utext="${event.event_name}">...</td>
-                <td>
-                    <form th:action="@{'/register/event/' + ${event.event_id}}" method="post">
-                        <input type="hidden" name="_method" value="delete">
-                        <input type="submit" value="Delete" />
-                    </form>
-                </td>
-            </tr>
-        </table>
-    </form>
 </body>
 </html>
 
