--- a/src/main/resources/templates/register/register_your_event.html
+++ b/src/main/resources/templates/register/register_your_event.html
@@ -35,19 +35,41 @@
     </div>
 </nav>
 <form>
-    <table class="table table-bordered" >
+    <table class="table table-bordered">
         <thead>
         <tr>
             <th>Event's Name</th>
             <th>Cancel</th>
         </tr>
         </thead>
-        <tr th:each ="event : ${events}">
+        <tr th:each="event : ${events}">
             <td th:utext="${event.event_name}">...</td>
             <td>
-                <form th:action="@{'/register/cancel_event/' + ${event.event_id}}" method="post">
-                    <input type="submit" value="Cancel" />
-                </form>
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                    Hủy tham gia
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="staticBackdropLabel">Xác nhận hủy tham gia sự kiện </h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                Bạn chắc chắn không muốn tham gia sự kiện này chứ ?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Suy nghĩ lại</button>
+                                <form th:action="@{'/register/cancel_event/' + ${event.event_id}}" method="post">
+                                    <input class="btn btn-primary" type="submit" value="Xác nhận"/>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </td>
         </tr>
     </table>
